--- a/index.html
+++ b/index.html
@@ -97,51 +97,8 @@
     </main>
 
     <!-- Footer -->
-    <footer style="margin-top: auto; border-top: 1px solid var(--glass-border); padding: 3rem 2rem 2rem">
+    <footer style="margin-top: auto; border-top: 1px solid var(--glass-border); padding: 2rem">
       <div style="max-width: 1280px; margin: 0 auto">
-        <!-- Support Card -->
-        <div style="display: flex; justify-content: center; margin-bottom: 3rem">
-          <div
-            style="
-              padding: 0.75rem 1.5rem;
-              background: rgba(102, 126, 234, 0.1);
-              border: 1px solid rgba(102, 126, 234, 0.2);
-              border-radius: var(--radius-md);
-              display: inline-flex;
-              align-items: center;
-              gap: 0.75rem;
-              max-width: 100%;
-            "
-          >
-            <svg
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <circle cx="12" cy="12" r="10" />
-              <path d="M12 16v-4M12 8h.01" />
-            </svg>
-            <span style="color: var(--text-secondary); font-size: 0.95rem;">
-              ¿Necesitas ayuda?
-            </span>
-            <a href="mailto:contacto@notsxbas.me" style="
-                color: var(--text-primary);
-                text-decoration: none;
-                font-weight: 600;
-                border-bottom: 1px solid rgba(102, 126, 234, 0.5);
-                transition: all var(--transition-fast);
-                white-space: nowrap;
-              " onmouseover="this.style.borderBottomColor='rgba(102, 126, 234, 1)'; this.style.color='rgba(102, 126, 234, 1)';" onmouseout="this.style.borderBottomColor='rgba(102, 126, 234, 0.5)'; this.style.color='var(--text-primary)';">
-              Contacta aquí
-            </a>
-          </div>
-        </div>
-
         <!-- Footer Info -->
         <div style="text-align: center; padding-top: 2rem; border-top: 1px solid var(--glass-border-subtle)">
           <p
