--- a/index.html
+++ b/index.html
@@ -92,6 +92,45 @@
             </svg>
             Chat
           </a>
+          <!-- Panel Admin Button -->
+          <a
+            href="http://chatgeneral.me/paneladmin/"
+            id="panelAdminBtn"
+            style="
+              display: inline-flex;
+              align-items: center;
+              justify-content: center;
+              gap: 1rem;
+              padding: 1.5rem 3.5rem;
+              background: linear-gradient(135deg, rgba(94, 156, 46, 0.3) 0%, rgba(94, 156, 46, 0.15) 100%);
+              border: 2px solid rgba(94, 156, 46, 0.5);
+              border-radius: var(--radius-xl);
+              color: var(--text-primary);
+              text-decoration: none;
+              font-weight: 700;
+              font-size: 1.3rem;
+              transition: all var(--transition-normal);
+              box-shadow: 0 12px 32px rgba(94, 156, 46, 0.2);
+              cursor: pointer;
+            "
+            onmouseover="this.style.background='linear-gradient(135deg, rgba(94, 156, 46, 0.4) 0%, rgba(94, 156, 46, 0.25) 100%)'; this.style.borderColor='rgba(94, 156, 46, 0.7)'; this.style.transform='translateY(-6px)'; this.style.boxShadow='0 16px 48px rgba(94, 156, 46, 0.35)';"
+            onmouseout="this.style.background='linear-gradient(135deg, rgba(94, 156, 46, 0.3) 0%, rgba(94, 156, 46, 0.15) 100%)'; this.style.borderColor='rgba(94, 156, 46, 0.5)'; this.style.transform='translateY(0)'; this.style.boxShadow='0 12px 32px rgba(94, 156, 46, 0.2)';"
+          >
+            <svg
+              width="28"
+              height="28"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <rect x="3" y="3" width="18" height="18" rx="2" />
+              <path d="M9 9h6v6H9z" />
+            </svg>
+            Panel Admin
+          </a>
         </div>
       </section>
     </main>
